[package]
name = "alkahest-rs"
version = "0.3.1"
edition = "2021"
description = "Rust SDK to Alkahest contracts for decentralized escrow and exchange"
license = "MIT"
repository = "https://github.com/CoopHive/alkahest-rs"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
