[package]
name = "alkahest-rs"
version = "0.4.1"
edition = "2024"
description = "Rust SDK to Alkahest contracts for decentralized escrow and exchange"
license = "MIT"
repository = "https://github.com/CoopHive/alkahest-rs"

[dependencies]
alloy = { version = "0.12", features = [
    "full",
    "node-bindings",
    "signers",
    "rlp",
    "eip712",
] }

# async
futures-util = "0.3"
tokio = { version = "1.44", features = ["full"] }

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
